--- a/TaskBoard.BLL/TaskBoard.BLL.csproj
+++ b/TaskBoard.BLL/TaskBoard.BLL.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="AutoMapper" Version="13.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\TaskBoard.DAL\TaskBoard.DAL.csproj" />
+    </ItemGroup>
+
 </Project>
