--- a/TaskBoard.WebAPI/TaskBoard.WebAPI.csproj
+++ b/TaskBoard.WebAPI/TaskBoard.WebAPI.csproj
@@ -11,4 +11,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\TaskBoard.BLL\TaskBoard.BLL.csproj" />
+    </ItemGroup>
+
 </Project>
